--- a/Lecture-3/card.css
+++ b/Lecture-3/card.css
@@ -2,12 +2,16 @@
     /**/
 /*}*/
 
+.container {
+    position: relative;
+}
 .card {
     width: 33.33%;
     height: 400px;
     box-shadow: 0px 14px 41px 0 rgba(51, 51, 51, 0.1);
     background-color: #f5f5dc57;
     margin: 50px auto;
+    position: absolute;
 }
 
 .card:hover {
