--- a/Lecture-15/views/main.hbs
+++ b/Lecture-15/views/main.hbs
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
+
 </head>
-<body>
+<body style="background-color: {{items}}">
 
 <!--{{todo}}-->
 
@@ -12,12 +14,12 @@
 
 <!--{{/if}}-->
 
-<ul>
-{{#each items}}
-    <li>{{this.name}}
-    <span>{{this.emotion}}</span>
-    </li>
-{{/each}}
-</ul>
+<!--<ul>-->
+<!--{{#each items}}-->
+    <!--<li>{{this}}-->
+    <!--</li>-->
+<!--{{/each}}-->
+<!--</ul>-->
+
 </body>
 </html>
